--- a/public/Craven_publications.bib
+++ b/public/Craven_publications.bib
@@ -659,67 +659,92 @@ tex.publisher: National Academy of Sciences},
 	file = {Craven et al. - 2019 - Dissecting macroecological and macroevolutionary p.pdf:/media/dylan/Extreme SSD/Zotero/storage/PX3IN6A2/Craven et al. - 2019 - Dissecting macroecological and macroevolutionary p.pdf:application/pdf}
 }
 
-@article{sandelCurrentClimateIsolation2019,
+@article{sandelCurrentClimateIsolation2020,
 	title = {Current climate, isolation and history drive global patterns of tree phylogenetic endemism},
-	volume = {0},
+	volume = {29},
 	issn = {1466-822X},
 	url = {https://doi.org/10.1111/geb.13001},
 	doi = {10.1111/geb.13001},
 	abstract = {Abstract Aim We mapped global patterns of tree phylogenetic endemism ({PE}) to identify hotspots and test hypotheses about possible drivers. Specifically, we tested hypotheses related to current climate, geographical characteristics and historical conditions and assessed their relative importance in shaping {PE} patterns. Location Global. Time period We used the present distribution of trees, and predictors covering conditions from the mid-Miocene to present. Major taxa studied All seed-bearing trees. Methods We compiled distributions for 58,542 tree species across 463 regions worldwide, matched these to a recent phylogeny of seed plants and calculated {PE} for each region. We used a suite of predictor variables describing current climate (e.g., mean annual temperature), geographical characteristics (e.g., isolation) and historical conditions (e.g., tree cover at the Last Glacial Maximum) in a spatial regression model to explain variation in {PE}. Results Tree {PE} was highest on islands, and was higher closer to the equator. All three groups of predictor variables contributed substantially to the {PE} pattern. Isolation and topographic heterogeneity promoted high {PE}, as did high current tree cover. Among mainland regions, temperature seasonality was strongly negatively related to {PE}, while mean annual temperature was positively related to {PE} on islands. Some relationships differed among the major floristic regions. For example, tree cover at the Last Glacial Maximum was a positive predictor of {PE} in the Palaeotropics, while tree cover at the Miocene was a negative predictor of {PE} in the Neotropics. Main conclusions Globally, {PE} can be explained by a combination of geographical, historical and current factors. Some geographical variables appear to be key predictors of {PE}. However, the impact of historic and current climate variables differs considerably among the major floristic regions, reflecting their unique histories. Hence, the current distribution of trees is the result of globally relevant geographical drivers and regional climatic histories.},
-	number = {0},
+	pages = {4--15},
+	number = {1},
 	journaltitle = {Global Ecology and Biogeography},
 	shortjournal = {Global Ecology and Biogeography},
 	author = {Sandel, Brody and Weigelt, Patrick and Kreft, Holger and Keppel, Gunnar and van der Sande, Masha T. and Levin, Sam and Smith, Stephen and Craven, Dylan and Knight, Tiffany M.},
-	urldate = {2019-09-03},
-	date = {2019-09-02},
+	urldate = {2019-12-02},
+	date = {2020-01-01},
+	note = {Citation Key Alias: {sandelCurrentClimateIsolation}2019},
 	keywords = {trees, historical contingency, islands, isolation, biogeography, phylogenetic endemism, climate stability},
 	file = {Sandel et al. - 2019 - Current climate, isolation and history drive globa.pdf:/media/dylan/Extreme SSD/Zotero/storage/FTIBWXG5/Sandel et al. - 2019 - Current climate, isolation and history drive globa.pdf:application/pdf}
 }
 
-@article{Craven769232,
-	title = {A cross-scale assessment of productivity-diversity relationships},
-	url = {https://www.biorxiv.org/content/early/2019/09/14/769232},
-	doi = {10.1101/769232},
-	abstract = {Biodiversity and ecosystem productivity vary across the globe and considerable effort has been made to describe their relationships. Biodiversity-ecosystem functioning research has traditionally focused on how experimentally controlled species richness affects net primary productivity (S→{NPP}) at small spatial grains. In contrast, the influence of productivity on richness ({NPP}→S) has been explored at many grains in naturally assembled communities. Mismatches in spatial scale between approaches have fostered debate about the strength and direction of biodiversity-productivity relationships. Here we examine the direction and strength of productivitys influence on diversity ({NPP}→S) and of diversitys influence on productivity (S→{NPP}), and how this varies across spatial grains using data from North American forests at grains from local (672 m2) to coarse spatial units (median area = 35,677 km2). We assess relationships using structural equation and Random Forest models, while accounting for variation in climate, environmental heterogeneity, management, and forest age. We show that relationships between S and {NPP} strengthen with spatial grain. Within each grain, S→{NPP} and {NPP}→S have similar magnitudes, meaning that processes underlying S→{NPP} and {NPP}→S either operate simultaneously, or that one of them is real and the other is an artifact. At all spatial grains, S was one of the weakest predictors of forest productivity, which was largely driven by biomass, temperature, and forest management and age. We conclude that spatial grain mediates relationships between biodiversity and productivity in real-world ecosystems and that results supporting predictions from each approach ({NPP}→S and S→{NPP}) serve as an impetus for future studies testing underlying mechanisms.},
-	journaltitle = {{bioRxiv}},
-	author = {Craven, Dylan and van der Sande, Masha and Meyer, Carsten and Gerstner, Katharina and Bennett, Joanne M and Giling, Darren P and Hines, Jes and Phillips, Helen R P and May, Felix and Bannar-Martin, Katherine and Chase, Jonathan and Keil, Petr},
-	date = {2019},
-	note = {tex.elocation-id: 769232
-tex.eprint: https://www.biorxiv.org/content/early/2019/09/14/769232.full.pdf
-tex.publisher: Cold Spring Harbor Laboratory},
-	file = {Craven et al. - 2019 - A cross-scale assessment of productivity-diversity.pdf:/media/dylan/Extreme SSD/Zotero/storage/7QBLFHVW/Craven et al. - 2019 - A cross-scale assessment of productivity-diversity.pdf:application/pdf}
-}
-
-@article{guzman-jacobEffectsForestuseIntensity2019,
+@article{guzman-jacobEffectsForestuseIntensity2020,
 	title = {Effects of forest-use intensity on vascular epiphyte diversity along an elevational gradient},
-	volume = {0},
-	rights = {© 2019 The Authors. Diversity and Distributions published by John Wiley \& Sons Ltd},
-	issn = {1472-4642},
-	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ddi.12992},
+	volume = {26},
+	issn = {1366-9516},
+	url = {https://doi.org/10.1111/ddi.12992},
 	doi = {10.1111/ddi.12992},
-	abstract = {Aim Understanding patterns of tropical plant diversity and their vulnerability to anthropogenic disturbance at different spatial scales remains a great challenge in ecology and conservation. Here, we study how the effects of forest-use intensity on vascular epiphyte diversity vary along a tropical elevational gradient. Location 3,500-m elevational gradient along the eastern slopes of Cofre de Perote, Mexico. Methods We studied the effects of forest-use intensity on alpha, beta and gamma diversity of vascular epiphyte assemblages in old-growth, degraded and secondary forests at eight study sites at 500-m intervals along the elevational gradient. At each elevation and in each of the three forest-use intensity levels, we established five 400-m2 plots yielding a total of 120 plots. Results Interactive effects of elevation and forest-use intensity strongly impacted local-scale patterns of vascular epiphyte diversity. Species diversity peaked at 500 as well as 1,500 m above sea level, which deviates from the previously reported hump-shaped pattern. In most cases, alpha diversity did not differ significantly among forest-use intensity levels. However, gamma diversity was always lower in secondary forests compared to old-growth forests across the entire elevational gradient. Within each elevational belt, beta diversity was dominated by species turnover along the forest-use intensity gradient in the lowlands and declined with increasing elevation, where community composition became increasingly nested. Along the elevational gradient, the spatial turnover of vascular epiphyte community composition was similar among forest-use intensity levels. Main conclusions Our results reveal a strong interaction between forest-use intensity and elevation, making it difficult to extrapolate findings from one elevational belt to another. Our findings highlight the value of old-growth forest for epiphyte diversity, but also show that degraded and secondary forests—depending on the elevational belt—may maintain a high species diversity and thus play an important role in conservation planning.},
-	number = {0},
+	abstract = {Abstract Aim Understanding patterns of tropical plant diversity and their vulnerability to anthropogenic disturbance at different spatial scales remains a great challenge in ecology and conservation. Here, we study how the effects of forest-use intensity on vascular epiphyte diversity vary along a tropical elevational gradient. Location 3,500-m elevational gradient along the eastern slopes of Cofre de Perote, Mexico. Methods We studied the effects of forest-use intensity on alpha, beta and gamma diversity of vascular epiphyte assemblages in old-growth, degraded and secondary forests at eight study sites at 500-m intervals along the elevational gradient. At each elevation and in each of the three forest-use intensity levels, we established five 400-m2 plots yielding a total of 120 plots. Results Interactive effects of elevation and forest-use intensity strongly impacted local-scale patterns of vascular epiphyte diversity. Species diversity peaked at 500 as well as 1,500 m above sea level, which deviates from the previously reported hump-shaped pattern. In most cases, alpha diversity did not differ significantly among forest-use intensity levels. However, gamma diversity was always lower in secondary forests compared to old-growth forests across the entire elevational gradient. Within each elevational belt, beta diversity was dominated by species turnover along the forest-use intensity gradient in the lowlands and declined with increasing elevation, where community composition became increasingly nested. Along the elevational gradient, the spatial turnover of vascular epiphyte community composition was similar among forest-use intensity levels. Main conclusions Our results reveal a strong interaction between forest-use intensity and elevation, making it difficult to extrapolate findings from one elevational belt to another. Our findings highlight the value of old-growth forest for epiphyte diversity, but also show that degraded and secondary forests?depending on the elevational belt?may maintain a high species diversity and thus play an important role in conservation planning.},
+	pages = {4--15},
+	number = {1},
 	journaltitle = {Diversity and Distributions},
-	author = {Guzmán‐Jacob, Valeria and Zotz, Gerhard and Craven, Dylan and Taylor, Amanda and Krömer, Thorsten and Monge‐González, María Leticia and Kreft, Holger},
-	urldate = {2019-10-07},
-	date = {2019},
-	langid = {english},
+	shortjournal = {Diversity and Distributions},
+	author = {Guzmán-Jacob, Valeria and Zotz, Gerhard and Craven, Dylan and Taylor, Amanda and Krömer, Thorsten and Monge-González, María Leticia and Kreft, Holger},
+	urldate = {2019-12-02},
+	date = {2020-01-01},
+	note = {Citation Key Alias: guzman-{jacobEffectsForestuseIntensity}2019},
 	keywords = {species richness, disturbance, composition, elevation, beta diversity, ferns, bromeliads, forest-use, orchids, tropical vegetation},
-	file = {Guzmán‐Jacob et al. - Effects of forest-use intensity on vascular epiphy.pdf:/media/dylan/Extreme SSD/Zotero/storage/Y4S2E3P8/Guzmán‐Jacob et al. - Effects of forest-use intensity on vascular epiphy.pdf:application/pdf;Snapshot:/media/dylan/Extreme SSD/Zotero/storage/PM9R5LVZ/ddi.html:text/html}
+	file = {Full Text:/media/dylan/Extreme SSD/Zotero/storage/JDVXWZR5/Guzmán-Jacob et al. - 2020 - Effects of forest-use intensity on vascular epiphy.pdf:application/pdf;Guzmán‐Jacob et al. - Effects of forest-use intensity on vascular epiphy.pdf:/media/dylan/Extreme SSD/Zotero/storage/Y4S2E3P8/Guzmán‐Jacob et al. - Effects of forest-use intensity on vascular epiphy.pdf:application/pdf;Snapshot:/media/dylan/Extreme SSD/Zotero/storage/PM9R5LVZ/ddi.html:text/html}
 }
 
-@article{monge-gonzalezResponseTreeDiversity2019,
-	title = {Response of tree diversity and community composition to forest-use intensity along a tropical elevational gradient},
-	rights = {© 2019 International Association for Vegetation Science},
-	issn = {1654-109X},
+@article{10.1371/journal.pone.0226474,
+	title = {Successional, spatial, and seasonal changes in seed rain in the Atlantic forest of southern Bahia, Brazil},
+	volume = {14},
+	rights = {All rights reserved},
+	url = {https://doi.org/10.1371/journal.pone.0226474},
+	doi = {10.1371/journal.pone.0226474},
+	abstract = {Seed arrival is a limiting factor for the regeneration of diverse tropical forests and may be an important mechanism that drives patterns of tree species’ distribution. Here we quantify spatial and seasonal variation in seed rain of secondary forests in southern Bahia, Brazil. We also examine whether secondary forest age enhances seed dispersal and whether seed rain density and diversity in secondary forests decay with distance from mature forest. Across a chronosequence of 15 pairs of mature and secondary forests, 105 seed traps were installed and monitored for one year. We tested the effects of secondary forest age, distance from mature forest, and seasonality on monthly seed rain density, diversity, seed dispersal mode, and diaspore size. We found that secondary forest age had strong, positive effects on the diversity of seed rain, which was generally higher during the wet season. Moreover, contrasting patterns among diversity indices revealed that seeds of rare species occurred more often in 40 yr old secondary forests and mature forests. While the proportion of biotically and abiotically dispersed seeds did not change significantly with distance from mature forest across all forest age classes, we found that biotically dispersed seeds contributed disproportionately more to seed rain diversity. Our results emphasize the importance of biotic dispersal to enhance diversity during secondary succession and suggest that changes in secondary forest structure have the potential to enhance the diversity of tropical secondary forests, principally by increasing dispersal of rare species.},
+	pages = {1--15},
+	number = {12},
+	journaltitle = {{PLOS} {ONE}},
+	author = {Piotto, Daniel and Craven, Dylan and Montagnini, Florencia and Ashton, Mark and Oliver, Chadwick and Thomas, William Wayt},
+	date = {2019-12},
+	note = {tex.publisher: Public Library of Science},
+	file = {Full Text:/media/dylan/Extreme SSD/Zotero/storage/FU435LEQ/Piotto et al. - 2019 - Successional, spatial, and seasonal changes in see.pdf:application/pdf}
+}
+
+@article{kattgeTRYPlantTrait2020,
+	title = {{TRY} plant trait database – enhanced coverage and open access},
+	volume = {26},
+	issn = {1365-2486},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.14904},
+	doi = {10.1111/gcb.14904},
+	abstract = {Plant traits—the morphological, anatomical, physiological, biochemical and phenological characteristics of plants—determine how plants respond to environmental factors, affect other trophic levels, and influence ecosystem properties and their benefits and detriments to people. Plant trait data thus represent the basis for a vast area of research spanning from evolutionary biology, community and functional ecology, to biodiversity conservation, ecosystem and landscape management, restoration, biogeography and earth system modelling. Since its foundation in 2007, the {TRY} database of plant traits has grown continuously. It now provides unprecedented data coverage under an open access data policy and is the main plant trait database used by the research community worldwide. Increasingly, the {TRY} database also supports new frontiers of trait-based plant research, including the identification of data gaps and the subsequent mobilization or measurement of new data. To support this development, in this article we evaluate the extent of the trait data compiled in {TRY} and analyse emerging patterns of data coverage and representativeness. Best species coverage is achieved for categorical traits—almost complete coverage for ‘plant growth form’. However, most traits relevant for ecology and vegetation modelling are characterized by continuous intraspecific variation and trait–environmental relationships. These traits have to be measured on individual plants in their respective environment. Despite unprecedented data coverage, we observe a humbling lack of completeness and representativeness of these continuous traits in many aspects. We, therefore, conclude that reducing data gaps and biases in the {TRY} database remains a key challenge and requires a coordinated approach to data mobilization and trait measurements. This can only be achieved in collaboration with other initiatives.},
+	pages = {119--188},
+	number = {1},
+	journaltitle = {Global Change Biology},
+	author = {Kattge, Jens and Bönisch, Gerhard and Díaz, Sandra and Lavorel, Sandra and Prentice, Iain Colin and Leadley, Paul and Tautenhahn, Susanne and Werner, Gijsbert D. A. and Aakala, Tuomas and Abedi, Mehdi and Acosta, Alicia T. R. and Adamidis, George C. and Adamson, Kairi and Aiba, Masahiro and Albert, Cécile H. and Alcántara, Julio M. and C, Carolina Alcázar and Aleixo, Izabela and Ali, Hamada and Amiaud, Bernard and Ammer, Christian and Amoroso, Mariano M. and Anand, Madhur and Anderson, Carolyn and Anten, Niels and Antos, Joseph and Apgaua, Deborah Mattos Guimarães and Ashman, Tia-Lynn and Asmara, Degi Harja and Asner, Gregory P. and Aspinwall, Michael and Atkin, Owen and Aubin, Isabelle and Baastrup‐Spohr, Lars and Bahalkeh, Khadijeh and Bahn, Michael and Baker, Timothy and Baker, William J. and Bakker, Jan P. and Baldocchi, Dennis and Baltzer, Jennifer and Banerjee, Arindam and Baranger, Anne and Barlow, Jos and Barneche, Diego R. and Baruch, Zdravko and Bastianelli, Denis and Battles, John and Bauerle, William and Bauters, Marijn and Bazzato, Erika and Beckmann, Michael and Beeckman, Hans and Beierkuhnlein, Carl and Bekker, Renee and Belfry, Gavin and Belluau, Michael and Beloiu, Mirela and Benavides, Raquel and Benomar, Lahcen and Berdugo‐Lattke, Mary Lee and Berenguer, Erika and Bergamin, Rodrigo and Bergmann, Joana and Carlucci, Marcos Bergmann and Berner, Logan and Bernhardt‐Römermann, Markus and Bigler, Christof and Bjorkman, Anne D. and Blackman, Chris and Blanco, Carolina and Blonder, Benjamin and Blumenthal, Dana and Bocanegra‐González, Kelly T. and Boeckx, Pascal and Bohlman, Stephanie and Böhning‐Gaese, Katrin and Boisvert‐Marsh, Laura and Bond, William and Bond‐Lamberty, Ben and Boom, Arnoud and Boonman, Coline C. F. and Bordin, Kauane and Boughton, Elizabeth H. and Boukili, Vanessa and Bowman, David M. J. S. and Bravo, Sandra and Brendel, Marco Richard and Broadley, Martin R. and Brown, Kerry A. and Bruelheide, Helge and Brumnich, Federico and Bruun, Hans Henrik and Bruy, David and Buchanan, Serra W. and Bucher, Solveig Franziska and Buchmann, Nina and Buitenwerf, Robert and Bunker, Daniel E. and Bürger, Jana and Burrascano, Sabina and Burslem, David F. R. P. and Butterfield, Bradley J. and Byun, Chaeho and Marques, Marcia and Scalon, Marina C. and Caccianiga, Marco and Cadotte, Marc and Cailleret, Maxime and Camac, James and Camarero, Jesús Julio and Campany, Courtney and Campetella, Giandiego and Campos, Juan Antonio and Cano‐Arboleda, Laura and Canullo, Roberto and Carbognani, Michele and Carvalho, Fabio and Casanoves, Fernando and Castagneyrol, Bastien and Catford, Jane A. and Cavender‐Bares, Jeannine and Cerabolini, Bruno E. L. and Cervellini, Marco and Chacón‐Madrigal, Eduardo and Chapin, Kenneth and Chapin, F. Stuart and Chelli, Stefano and Chen, Si-Chong and Chen, Anping and Cherubini, Paolo and Chianucci, Francesco and Choat, Brendan and Chung, Kyong-Sook and Chytrý, Milan and Ciccarelli, Daniela and Coll, Lluís and Collins, Courtney G. and Conti, Luisa and Coomes, David and Cornelissen, Johannes H. C. and Cornwell, William K. and Corona, Piermaria and Coyea, Marie and Craine, Joseph and Craven, Dylan and Cromsigt, Joris P. G. M. and Csecserits, Anikó and Cufar, Katarina and Cuntz, Matthias and Silva, Ana Carolina da and Dahlin, Kyla M. and Dainese, Matteo and Dalke, Igor and Fratte, Michele Dalle and Dang‐Le, Anh Tuan and Danihelka, Jirí and Dannoura, Masako and Dawson, Samantha and Beer, Arend Jacobus de and Frutos, Angel De and Long, Jonathan R. De and Dechant, Benjamin and Delagrange, Sylvain and Delpierre, Nicolas and Derroire, Géraldine and Dias, Arildo S. and Diaz‐Toribio, Milton Hugo and Dimitrakopoulos, Panayiotis G. and Dobrowolski, Mark and Doktor, Daniel and Dřevojan, Pavel and Dong, Ning and Dransfield, John and Dressler, Stefan and Duarte, Leandro and Ducouret, Emilie and Dullinger, Stefan and Durka, Walter and Duursma, Remko and Dymova, Olga and E‐Vojtkó, Anna and Eckstein, Rolf Lutz and Ejtehadi, Hamid and Elser, James and Emilio, Thaise and Engemann, Kristine and Erfanian, Mohammad Bagher and Erfmeier, Alexandra and Esquivel‐Muelbert, Adriane and Esser, Gerd and Estiarte, Marc and Domingues, Tomas F. and Fagan, William F. and Fagúndez, Jaime and Falster, Daniel S. and Fan, Ying and Fang, Jingyun and Farris, Emmanuele and Fazlioglu, Fatih and Feng, Yanhao and Fernandez‐Mendez, Fernando and Ferrara, Carlotta and Ferreira, Joice and Fidelis, Alessandra and Finegan, Bryan and Firn, Jennifer and Flowers, Timothy J. and Flynn, Dan F. B. and Fontana, Veronika and Forey, Estelle and Forgiarini, Cristiane and François, Louis and Frangipani, Marcelo and Frank, Dorothea and Frenette‐Dussault, Cedric and Freschet, Grégoire T. and Fry, Ellen L. and Fyllas, Nikolaos M. and Mazzochini, Guilherme G. and Gachet, Sophie and Gallagher, Rachael and Ganade, Gislene and Ganga, Francesca and García‐Palacios, Pablo and Gargaglione, Veronica and Garnier, Eric and Garrido, Jose Luis and Gasper, André Luís de and Gea‐Izquierdo, Guillermo and Gibson, David and Gillison, Andrew N. and Giroldo, Aelton and Glasenhardt, Mary-Claire and Gleason, Sean and Gliesch, Mariana and Goldberg, Emma and Göldel, Bastian and Gonzalez‐Akre, Erika and Gonzalez‐Andujar, Jose L. and González‐Melo, Andrés and González‐Robles, Ana and Graae, Bente Jessen and Granda, Elena and Graves, Sarah and Green, Walton A. and Gregor, Thomas and Gross, Nicolas and Guerin, Greg R. and Günther, Angela and Gutiérrez, Alvaro G. and Haddock, Lillie and Haines, Anna and Hall, Jefferson and Hambuckers, Alain and Han, Wenxuan and Harrison, Sandy P. and Hattingh, Wesley and Hawes, Joseph E. and He, Tianhua and He, Pengcheng and Heberling, Jacob Mason and Helm, Aveliina and Hempel, Stefan and Hentschel, Jörn and Hérault, Bruno and Hereş, Ana-Maria and Herz, Katharina and Heuertz, Myriam and Hickler, Thomas and Hietz, Peter and Higuchi, Pedro and Hipp, Andrew L. and Hirons, Andrew and Hock, Maria and Hogan, James Aaron and Holl, Karen and Honnay, Olivier and Hornstein, Daniel and Hou, Enqing and Hough‐Snee, Nate and Hovstad, Knut Anders and Ichie, Tomoaki and Igić, Boris and Illa, Estela and Isaac, Marney and Ishihara, Masae and Ivanov, Leonid and Ivanova, Larissa and Iversen, Colleen M. and Izquierdo, Jordi and Jackson, Robert B. and Jackson, Benjamin and Jactel, Hervé and Jagodzinski, Andrzej M. and Jandt, Ute and Jansen, Steven and Jenkins, Thomas and Jentsch, Anke and Jespersen, Jens Rasmus Plantener and Jiang, Guo-Feng and Johansen, Jesper Liengaard and Johnson, David and Jokela, Eric J. and Joly, Carlos Alfredo and Jordan, Gregory J. and Joseph, Grant Stuart and Junaedi, Decky and Junker, Robert R. and Justes, Eric and Kabzems, Richard and Kane, Jeffrey and Kaplan, Zdenek and Kattenborn, Teja and Kavelenova, Lyudmila and Kearsley, Elizabeth and Kempel, Anne and Kenzo, Tanaka and Kerkhoff, Andrew and Khalil, Mohammed I. and Kinlock, Nicole L. and Kissling, Wilm Daniel and Kitajima, Kaoru and Kitzberger, Thomas and Kjøller, Rasmus and Klein, Tamir and Kleyer, Michael and Klimešová, Jitka and Klipel, Joice and Kloeppel, Brian and Klotz, Stefan and Knops, Johannes M. H. and Kohyama, Takashi and Koike, Fumito and Kollmann, Johannes and Komac, Benjamin and Komatsu, Kimberly and König, Christian and Kraft, Nathan J. B. and Kramer, Koen and Kreft, Holger and Kühn, Ingolf and Kumarathunge, Dushan and Kuppler, Jonas and Kurokawa, Hiroko and Kurosawa, Yoko and Kuyah, Shem and Laclau, Jean-Paul and Lafleur, Benoit and Lallai, Erik and Lamb, Eric and Lamprecht, Andrea and Larkin, Daniel J. and Laughlin, Daniel and Bagousse‐Pinguet, Yoann Le and Maire, Guerric le and Roux, Peter C. le and Roux, Elizabeth le and Lee, Tali and Lens, Frederic and Lewis, Simon L. and Lhotsky, Barbara and Li, Yuanzhi and Li, Xine and Lichstein, Jeremy W. and Liebergesell, Mario and Lim, Jun Ying and Lin, Yan-Shih and Linares, Juan Carlos and Liu, Chunjiang and Liu, Daijun and Liu, Udayangani and Livingstone, Stuart and Llusià, Joan and Lohbeck, Madelon and López‐García, Álvaro and Lopez‐Gonzalez, Gabriela and Lososová, Zdeňka and Louault, Frédérique and Lukács, Balázs A. and Lukeš, Petr and Luo, Yunjian and Lussu, Michele and Ma, Siyan and Pereira, Camilla Maciel Rabelo and Mack, Michelle and Maire, Vincent and Mäkelä, Annikki and Mäkinen, Harri and Malhado, Ana Claudia Mendes and Mallik, Azim and Manning, Peter and Manzoni, Stefano and Marchetti, Zuleica and Marchino, Luca and Marcilio‐Silva, Vinicius and Marcon, Eric and Marignani, Michela and Markesteijn, Lars and Martin, Adam and Martínez‐Garza, Cristina and Martínez‐Vilalta, Jordi and Mašková, Tereza and Mason, Kelly and Mason, Norman and Massad, Tara Joy and Masse, Jacynthe and Mayrose, Itay and {McCarthy}, James and {McCormack}, M. Luke and {McCulloh}, Katherine and {McFadden}, Ian R. and {McGill}, Brian J. and {McPartland}, Mara Y. and Medeiros, Juliana S. and Medlyn, Belinda and Meerts, Pierre and Mehrabi, Zia and Meir, Patrick and Melo, Felipe P. L. and Mencuccini, Maurizio and Meredieu, Céline and Messier, Julie and Mészáros, Ilona and Metsaranta, Juha and Michaletz, Sean T. and Michelaki, Chrysanthi and Migalina, Svetlana and Milla, Ruben and Miller, Jesse E. D. and Minden, Vanessa and Ming, Ray and Mokany, Karel and Moles, Angela T. and Molnár, Attila and Molofsky, Jane and Molz, Martin and Montgomery, Rebecca A. and Monty, Arnaud and Moravcová, Lenka and Moreno‐Martínez, Alvaro and Moretti, Marco and Mori, Akira S. and Mori, Shigeta and Morris, Dave and Morrison, Jane and Mucina, Ladislav and Mueller, Sandra and Muir, Christopher D. and Müller, Sandra Cristina and Munoz, François and Myers‐Smith, Isla H. and Myster, Randall W. and Nagano, Masahiro and Naidu, Shawna and Narayanan, Ayyappan and Natesan, Balachandran and Negoita, Luka and Nelson, Andrew S. and Neuschulz, Eike Lena and Ni, Jian and Niedrist, Georg and Nieto, Jhon and Niinemets, Ülo and Nolan, Rachael and Nottebrock, Henning and Nouvellon, Yann and Novakovskiy, Alexander and Nystuen, Kristin Odden and O'Grady, Anthony and O'Hara, Kevin and O'Reilly‐Nugent, Andrew and Oakley, Simon and Oberhuber, Walter and Ohtsuka, Toshiyuki and Oliveira, Ricardo and Öllerer, Kinga and Olson, Mark E. and Onipchenko, Vladimir and Onoda, Yusuke and Onstein, Renske E. and Ordonez, Jenny C. and Osada, Noriyuki and Ostonen, Ivika and Ottaviani, Gianluigi and Otto, Sarah and Overbeck, Gerhard E. and Ozinga, Wim A. and Pahl, Anna T. and Paine, C. E. Timothy and Pakeman, Robin J. and Papageorgiou, Aristotelis C. and Parfionova, Evgeniya and Pärtel, Meelis and Patacca, Marco and Paula, Susana and Paule, Juraj and Pauli, Harald and Pausas, Juli G. and Peco, Begoña and Penuelas, Josep and Perea, Antonio and Peri, Pablo Luis and Petisco‐Souza, Ana Carolina and Petraglia, Alessandro and Petritan, Any Mary and Phillips, Oliver L. and Pierce, Simon and Pillar, Valério D. and Pisek, Jan and Pomogaybin, Alexandr and Poorter, Hendrik and Portsmuth, Angelika and Poschlod, Peter and Potvin, Catherine and Pounds, Devon and Powell, A. Shafer and Power, Sally A. and Prinzing, Andreas and Puglielli, Giacomo and Pyšek, Petr and Raevel, Valerie and Rammig, Anja and Ransijn, Johannes and Ray, Courtenay A. and Reich, Peter B. and Reichstein, Markus and Reid, Douglas E. B. and Réjou‐Méchain, Maxime and Dios, Victor Resco de and Ribeiro, Sabina and Richardson, Sarah and Riibak, Kersti and Rillig, Matthias C. and Riviera, Fiamma and Robert, Elisabeth M. R. and Roberts, Scott and Robroek, Bjorn and Roddy, Adam and Rodrigues, Arthur Vinicius and Rogers, Alistair and Rollinson, Emily and Rolo, Victor and Römermann, Christine and Ronzhina, Dina and Roscher, Christiane and Rosell, Julieta A. and Rosenfield, Milena Fermina and Rossi, Christian and Roy, David B. and Royer‐Tardif, Samuel and Rüger, Nadja and Ruiz‐Peinado, Ricardo and Rumpf, Sabine B. and Rusch, Graciela M. and Ryo, Masahiro and Sack, Lawren and Saldaña, Angela and Salgado‐Negret, Beatriz and Salguero‐Gomez, Roberto and Santa‐Regina, Ignacio and Santacruz‐García, Ana Carolina and Santos, Joaquim and Sardans, Jordi and Schamp, Brandon and Scherer‐Lorenzen, Michael and Schleuning, Matthias and Schmid, Bernhard and Schmidt, Marco and Schmitt, Sylvain and Schneider, Julio V. and Schowanek, Simon D. and Schrader, Julian and Schrodt, Franziska and Schuldt, Bernhard and Schurr, Frank and Garvizu, Galia Selaya and Semchenko, Marina and Seymour, Colleen and Sfair, Julia C. and Sharpe, Joanne M. and Sheppard, Christine S. and Sheremetiev, Serge and Shiodera, Satomi and Shipley, Bill and Shovon, Tanvir Ahmed and Siebenkäs, Alrun and Sierra, Carlos and Silva, Vasco and Silva, Mateus and Sitzia, Tommaso and Sjöman, Henrik and Slot, Martijn and Smith, Nicholas G. and Sodhi, Darwin and Soltis, Pamela and Soltis, Douglas and Somers, Ben and Sonnier, Grégory and Sørensen, Mia Vedel and Sosinski, Enio Egon and Soudzilovskaia, Nadejda A. and Souza, Alexandre F. and Spasojevic, Marko and Sperandii, Marta Gaia and Stan, Amanda B. and Stegen, James and Steinbauer, Klaus and Stephan, Jörg G. and Sterck, Frank and Stojanovic, Dejan B. and Strydom, Tanya and Suarez, Maria Laura and Svenning, Jens-Christian and Svitková, Ivana and Svitok, Marek and Svoboda, Miroslav and Swaine, Emily and Swenson, Nathan and Tabarelli, Marcelo and Takagi, Kentaro and Tappeiner, Ulrike and Tarifa, Rubén and Tauugourdeau, Simon and Tavsanoglu, Cagatay and Beest, Mariska te and Tedersoo, Leho and Thiffault, Nelson and Thom, Dominik and Thomas, Evert and Thompson, Ken and Thornton, Peter E. and Thuiller, Wilfried and Tichý, Lubomír and Tissue, David and Tjoelker, Mark G. and Tng, David Yue Phin and Tobias, Joseph and Török, Péter and Tarin, Tonantzin and Torres‐Ruiz, José M. and Tóthmérész, Béla and Treurnicht, Martina and Trivellone, Valeria and Trolliet, Franck and Trotsiuk, Volodymyr and Tsakalos, James L. and Tsiripidis, Ioannis and Tysklind, Niklas and Umehara, Toru and Usoltsev, Vladimir and Vadeboncoeur, Matthew and Vaezi, Jamil and Valladares, Fernando and Vamosi, Jana and Bodegom, Peter M. van and Breugel, Michiel van and Cleemput, Elisa Van and Weg, Martine van de and Merwe, Stephni van der and Plas, Fons van der and Sande, Masha T. van der and Kleunen, Mark van and Meerbeek, Koenraad Van and Vanderwel, Mark and Vanselow, Kim André and Vårhammar, Angelica and Varone, Laura and Valderrama, Maribel Yesenia Vasquez and Vassilev, Kiril and Vellend, Mark and Veneklaas, Erik J. and Verbeeck, Hans and Verheyen, Kris and Vibrans, Alexander and Vieira, Ima and Villacís, Jaime and Violle, Cyrille and Vivek, Pandi and Wagner, Katrin and Waldram, Matthew and Waldron, Anthony and Walker, Anthony P. and Waller, Martyn and Walther, Gabriel and Wang, Han and Wang, Feng and Wang, Weiqi and Watkins, Harry and Watkins, James and Weber, Ulrich and Weedon, James T. and Wei, Liping and Weigelt, Patrick and Weiher, Evan and Wells, Aidan W. and Wellstein, Camilla and Wenk, Elizabeth and Westoby, Mark and Westwood, Alana and White, Philip John and Whitten, Mark and Williams, Mathew and Winkler, Daniel E. and Winter, Klaus and Womack, Chevonne and Wright, Ian J. and Wright, S. Joseph and Wright, Justin and Pinho, Bruno X. and Ximenes, Fabiano and Yamada, Toshihiro and Yamaji, Keiko and Yanai, Ruth and Yankov, Nikolay and Yguel, Benjamin and Zanini, Kátia Janaina and Zanne, Amy E. and Zelený, David and Zhao, Yun-Peng and Zheng, Jingming and Zheng, Ji and Ziemińska, Kasia and Zirbel, Chad R. and Zizka, Georg and Zo‐Bi, Irié Casimir and Zotz, Gerhard and Wirth, Christian},
+	urldate = {2019-12-31},
+	date = {2020},
+	langid = {english},
+	keywords = {functional diversity, plant traits, data coverage, data integration, data representativeness, {TRY} plant trait database},
+	file = {Kattge et al. - TRY plant trait database – enhanced coverage and o.pdf:/media/dylan/Extreme SSD/Zotero/storage/GJB7VSFN/Kattge et al. - TRY plant trait database – enhanced coverage and o.pdf:application/pdf;Snapshot:/media/dylan/Extreme SSD/Zotero/storage/LPEA268S/gcb.html:text/html}
+}
+
+@article{doi:10.1111/avsc.12465,
+	title = {Response of tree diversity and community composition to forest use intensity along a tropical elevational gradient},
+	volume = {23},
+	rights = {All rights reserved},
 	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/avsc.12465},
 	doi = {10.1111/avsc.12465},
-	abstract = {Question Land-use change and intensification are currently the most pervasive threats to tropical biodiversity. Yet, their effects on biodiversity change with elevation is unknown. Here we examine how tree diversity and community composition vary with elevation and how the effects of forest-use intensity on tree diversity and community composition change within elevations. Location Eastern slopes of the Cofre de Perote mountain, state of Veracruz, Mexico. Methods We assessed tree diversity and composition using a sampling design in which elevation was crossed with three levels of forest-use intensity: old-growth, degraded, and secondary forests. We established 120 20 x 20 m forest plots, located at eight sites between 0 and 3545 m. At each site, five replicate plots were inventoried for each level of forest-use intensity. Results Our analyses revealed an interactive effect between elevation and forest-use intensity affecting tree diversity and community composition along the elevational gradient. Contrasting effects of forest-use intensity within elevation resulted in tree diversity following a low-plateau pattern for old-growth and a bimodal pattern for degraded and secondary forests. Along the entire elevational gradient, 217 tree species distributed within 154 genera and 80 families. Species accumulation curves revealed that forests at 0 and 1500 m elevation showed differences in species richness among forest-use intensities. In contrast, species richness did not differ between old-growth forest and the other forest-use intensities in five of the eight studied elevations. In terms of community composition, secondary forests differed from old-growth and degraded forests. Conclusion Our results suggest that the interactive effects of elevation and forest-use intensity change tree diversity patterns and community composition along a tropical elevational gradient. Degraded forests were similar to old-growth forests in terms of species diversity and composition, suggesting that they may act as a safeguard of tree diversity in human-dominated tropical landscapes.},
+	abstract = {Abstract Question Land-use change and intensification are currently the most pervasive threats to tropical biodiversity. Yet, their effects on biodiversity change with elevation are unknown. Here, we examine how tree diversity and community composition vary with elevation and how the effects of forest use intensity on tree diversity and community composition change within elevations. Location Eastern slopes of the Cofre de Perote mountain, state of Veracruz, Mexico. Methods We assessed tree diversity and composition using a sampling design in which elevation was crossed with three levels of forest use intensity: old-growth, degraded, and secondary forests. We established 120 20 m × 20 m forest plots, located at eight sites between 0 m and 3,545 m. At each site, five replicate plots were inventoried for each level of forest use intensity. Results Our analyses revealed an interactive effect between elevation and forest use intensity affecting tree diversity and community composition along the elevational gradient. Contrasting effects of forest use intensity within elevation resulted in tree diversity following a low-plateau pattern for old-growth and a bimodal pattern for degraded and secondary forests. Along the entire elevational gradient, there were 217 tree species distributed within 154 genera and 80 families. Species accumulation curves revealed that forests at 0 m and 1,500 m elevation showed differences in species richness among forest use intensities. In contrast, species richness did not differ between old-growth forest and the other forest use intensities in five of the eight studied elevations. In terms of community composition, secondary forests differed from old-growth and degraded forests. Conclusion Our results suggest that the interactive effects of elevation and forest use intensity change tree diversity patterns and community composition along a tropical elevational gradient. Degraded forests were similar to old-growth forests in terms of species diversity and composition, suggesting that they may act as a safeguard of tree diversity in human-dominated tropical landscapes.},
+	pages = {69--79},
+	number = {1},
 	journaltitle = {Applied Vegetation Science},
-	author = {Monge‐González, María Leticia and Craven, Dylan and Krömer, Thorsten and Castillo‐Campos, Gonzalo and Hernández‐Sánchez, Alejandro and Guzmán‐Jacob, Valeria and Guerrero‐Ramírez, Nathaly and Kreft, Holger},
-	urldate = {2019-11-11},
-	date = {2019},
-	langid = {english},
-	keywords = {Mexico, Secondary forest, Degraded forest, Elevational gradient, Land-use, Old-growth forest, Tropical montane forest},
-	file = {Full Text PDF:/media/dylan/Extreme SSD/Zotero/storage/7Y3H96MD/Monge‐González et al. - Response of tree diversity and community compositi.pdf:application/pdf;Snapshot:/media/dylan/Extreme SSD/Zotero/storage/QGZJGKMB/avsc.html:text/html}
+	author = {Monge-González, María Leticia and Craven, Dylan and Krömer, Thorsten and Castillo-Campos, Gonzalo and Hernández-Sánchez, Alejandro and Guzmán-Jacob, Valeria and Guerrero-Ramírez, Nathaly and Kreft, Holger},
+	date = {2020},
+	note = {tex.ids: monge-{gonzalezResponseTreeDiversity}2019
+tex.eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/avsc.12465},
+	keywords = {land use, Mexico, secondary forest, elevational gradient, Secondary forest, old-growth forest, Degraded forest, Elevational gradient, Land-use, Old-growth forest, Tropical montane forest, degraded forest, tropical montane forest},
+	file = {Monge-González et al. - Response of tree diversity and community compositi.pdf:/media/dylan/Extreme SSD/Zotero/storage/QL6MWVQ3/Monge-González et al. - Response of tree diversity and community compositi.pdf:application/pdf;Snapshot:/media/dylan/Extreme SSD/Zotero/storage/QGZJGKMB/avsc.html:text/html}
 }
